--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,6 +38,10 @@
                             Gestión Personas
                         </a>
 
+                        <a href="{{ url_for('rrhh.gestion_programas') }}" class="border-transparent text-gray-500 hover:border-blue-500 hover:text-gray-700 inline-flex items-center px-1 pt-1 border-b-2 text-sm font-medium transition duration-150 ease-in-out">
+                            Programas
+                        </a>
+
                         <div class="relative flex items-center" x-data="{ open: false }">
                             <button @click="open = !open" type="button" class="group inline-flex items-center px-1 pt-1 border-b-2 border-transparent text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300 focus:outline-none transition duration-150 ease-in-out">
                                 <span>Configuración</span>
